<resources>
    <string name="app_name">MacroCounterRemaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Setting name…</string>
    <string name="nav_header_subtitle">Setting email…</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="fetching">Fetching daily progress macros</string>
    <string name="fetching_notes">Fetching notes from database</string>
    <string name="deletion_failed">Failed to delete note from database</string>
    <string name="deleting_item">Deleting note</string>
    <string name="adding_note">Adding note to database</string>
    <string name="addition_failed">Failed to add notes to database</string>
    <string name="deleting_items">Deleting All Notes</string>
    <string name="logout_confirmation">Are you sure you want to logout? All notes will be deleted.</string>
    <string name="updating_macros">Updating your macros</string>
    <string name="update">Update Macros</string>
    <string name="login_first">Please login/register first</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login">Login</string>
    <string name="implement_interface">Interface must be implemented</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="successful_update">Macros update successful</string>
    <string name="fetch_failed">Fetching macros failed</string>

    <string name="P">P</string>
    <string name="C">C</string>
    <string name="F">F</string>
    <string name="cal">CAL</string>

    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="register">Register</string>

    <string name="protein">Protein</string>
    <string name="carbs">Carbohydrates</string>
    <string name="carb" translatable="false">carbs</string>
    <string name="fat" translatable="false">fats</string>
    <string name="prot" translatable="false">protein</string>
    <string name="fats">Fats</string>
    <string name="protein_goal">Daily protein intake</string>
    <string name="carb_goal">Daily carbohydrate intake</string>
    <string name="fat_goal">Daily fat intake</string>
    <string name="logging">Logging in…</string>
    <string name="fill_empty_fields">Please fill empty fields</string>
    <string name="uncorrect_email">Email format is incorrect</string>

    <string name="authorization" translatable="false">Authorization</string>
    <string name="bearer" translatable="false">Bearer</string>

    <string name="internet_unavailable" translatable="false">INTERNET UNAVAILABLE</string>
    <string name="ok" translatable="false">OK</string>
    <string name="created" translatable="false">CREATED</string>
    <string name="accepted" translatable="false">ACCEPTED</string>
    <string name="no_content" translatable="false">NO CONTENT</string>
    <string name="reset_content" translatable="false">RESET CONTENT</string>
    <string name="partial_content" translatable="false">PARTIAL CONTENT</string>
    <string name="multi_status" translatable="false">MULTI STATUS</string>
    <string name="already_reported" translatable="false">ALREADY REPORTED</string>
    <string name="im_used" translatable="false">IM USED</string>
    <string name="multiple_choices" translatable="false">MULTIPLE CHOICES</string>
    <string name="moved_permanently" translatable="false">MOVED PERMANENTLY</string>
    <string name="found" translatable="false">FOUND</string>
    <string name="see_other" translatable="false">SEE OTHER</string>
    <string name="not_modified" translatable="false">NOT MODIFIED</string>
    <string name="use_proxy" translatable="false">USE PROXY</string>
    <string name="unused" translatable="false">UNUSED</string>
    <string name="temporary_redirect" translatable="false">TEMPORARY REDIRECT</string>
    <string name="permanent_redirect" translatable="false">PERMANENT REDIRECT</string>
    <string name="bad_request" translatable="false">BAD REQUEST</string>
    <string name="unauthorized" translatable="false">UNAUTHORIZED</string>
    <string name="payment_required" translatable="false">PAYMENT REQUIRED</string>
    <string name="FORBIDDEN" translatable="false">FORBIDDEN</string>
    <string name="not_found" translatable="false">USER/PAGE NOT FOUND</string>
    <string name="method_not_allowed" translatable="false">METHOD NOT ALLOWED</string>
    <string name="not_acceptable" translatable="false">NOT ACCEPTABLE</string>
    <string name="proxy_authentication_required" translatable="false">PROXY AUTHENTICATION REQUIRED</string>
    <string name="request_timeout" translatable="false">REQUEST TIMEOUT</string>
    <string name="conflict" translatable="false">CONFLICT - USER EXISTS</string>
    <string name="gone" translatable="false">GONE</string>
    <string name="length_required" translatable="false">LENGTH REQUIRED</string>
    <string name="precondition_failed" translatable="false">PRECONDITION FAILED</string>
    <string name="request_entity_too_large" translatable="false">REQUEST ENTITY TOO LARGE</string>
    <string name="request_uri_too_large" translatable="false">REQUEST URI TOO LARGE </string>
    <string name="unsupported_media_type" translatable="false">UNSUPPORTED MEDIA TYPE</string>
    <string name="request_range_unsatisfied" translatable="false">REQUEST RANGE UNSATISFIED</string>
    <string name="expectation_failed" translatable="false">EXPECTATION FAILED</string>
    <string name="upgrade_required" translatable="false">UPGRADE REQUIRED</string>
    <string name="precondition_required" translatable="false">PRECONDITION REQUIRED</string>
    <string name="too_many_requests" translatable="false">TOO MANY REQUESTS</string>
    <string name="request_headers_too_large" translatable="false">REQUEST HEADERS TOO LRAGE</string>
    <string name="internal_server_error" translatable="false">INTERNAL SERVER ERROR</string>
    <string name="not_implemented" translatable="false">NOT IMPLEMENTED</string>
    <string name="bad_gateway" translatable="false">BAD GATEWAY</string>
    <string name="service_unavailable" translatable="false">SERVICE UNAVAILABLE</string>
    <string name="gateway_timeout" translatable="false">GATEWAY TIMEOUT</string>
    <string name="network_authentication_required" translatable="false">NETWORK AUTHENTICATION REQUIRED</string>
    <string name="network_read_timeout_error" translatable="false">NETWORK READ TIMEOUT ERROR</string>
    <string name="network_connect_timeout_error" translatable="false">NETWORK CONNECT TIMEOUT ERROR</string>
    <string name="forbidden" translatable="false">FORBIDDEN</string>
</resources>
