<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:layout_marginLeft="48dp" android:layout_marginStart="48dp"
              android:layout_marginEnd="48dp" android:layout_marginRight="48dp"
              android:layout_marginTop="72dp" android:layout_marginBottom="72dp" android:id="@+id/ll_one">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_name" android:background="@drawable/underline" android:hint="@string/name"
            android:textColorHint="@color/lighterGrey" android:textColor="@color/darker_light_blue"
            android:paddingTop="48dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_email" android:background="@drawable/underline" android:hint="@string/email"
            android:textColorHint="@color/lighterGrey" android:textColor="@color/darker_light_blue"
            android:paddingTop="48dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/et_password" android:background="@drawable/underline" android:hint="@string/password"
            android:textColorHint="@color/lighterGrey" android:textColor="@color/darker_light_blue"
            android:paddingTop="48dp"/>
    <Button
            android:text="@string/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnNext"
            android:background="@drawable/button_border" android:foreground="?attr/selectableItemBackground"
            android:textColor="@color/white" android:layout_marginTop="72dp" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"/>
</LinearLayout>