<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark" android:id="@+id/scrollView">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical" android:layout_marginTop="150dp" android:layout_marginBottom="72dp"
                  android:layout_marginRight="48dp" android:layout_marginEnd="48dp" android:layout_marginLeft="48dp"
                  android:layout_marginStart="48dp">


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/et_email_address" android:background="@drawable/underline" android:hint="@string/email"
                android:textColorHint="@color/lighterGrey" android:textColor="@color/darker_light_blue"
                android:paddingTop="48dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password" android:background="@drawable/underline" android:hint="@string/password"
                android:textColorHint="@color/lighterGrey" android:textColor="@color/darker_light_blue"
                android:paddingTop="48dp"/>
        <Button
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnLogin"
                android:background="@drawable/button_border" android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/white" android:layout_marginTop="72dp" android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp" android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"/>
    </LinearLayout>
</ScrollView>