<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/protein_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/protein"
                    android:textColor="@color/darker_light_blue"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/protein_cat_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/underline_blue"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/carbs_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/carbs"
                    android:textColor="@color/darker_light_blue"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/carbs_cat_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/underline_blue"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/fat_cat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fats"
                    android:textColor="@color/darker_light_blue"
                    android:textSize="18sp" />

            <EditText
                    android:id="@+id/fat_cat_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/underline_blue"
                    android:ems="10"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@color/white"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/submit"
            android:textColor="#EB2748" />

</LinearLayout>