<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <CalendarView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/calendarView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/ll_titles">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_protein_title"
                            android:layout_weight="1"
                            android:gravity="center" android:text="@string/P" android:onClick="goalDisplay"
                            android:tag="protein"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_carbs_title"
                            android:layout_weight="1"
                            android:gravity="center" android:text="@string/C" android:onClick="goalDisplay"
                            android:tag="carbs"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_fat_title"
                            android:layout_weight="1"
                            android:gravity="center" android:text="@string/F" android:onClick="goalDisplay"
                            android:tag="fat"/>
                    <TextView
                            android:text="@string/cal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_cal_title"
                            android:layout_weight="1" android:gravity="center" android:onClick="goalDisplay"
                            android:tag="calories"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/ll_currents">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_protein_current"
                            android:layout_weight="1" android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_carbs_current"
                            android:layout_weight="1" android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_fat_current"
                            android:layout_weight="1" android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_cal_current"
                            android:layout_weight="1" android:gravity="center"/>
                </LinearLayout>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" android:id="@+id/ll_remain">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_protein_remain"
                            android:layout_weight="1" android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_carbs_remain"
                            android:layout_weight="1" android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_fat_remain"
                            android:layout_weight="1" android:gravity="center"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" android:id="@+id/tv_cal_remain"
                            android:layout_weight="1" android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_notes"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>